FIX(webgl-integration): Fix nav UI on iPhone;

--- a/react-amplified/src/assets/style/main.css
+++ b/react-amplified/src/assets/style/main.css
@@ -989,6 +989,12 @@ select.form-control {
     top: 70vh;
   }
 }
+@media (max-height: 548px) {
+  .navbar-nav.navbar-list {
+    gap: 1vh;
+    padding-bottom: 2vh;
+  }
+}
 
 /* Section 2 */
 .section2 {
